--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,16 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Hero from "../components/sections/Hero.astro";
+import Projects from "../components/sections/Projects.astro";
+import Layout from "../layouts/Layout.astro";
+import AboutMe from "../components/sections/AboutMe.astro";
+import Techs from "../components/sections/Techs.astro";
+import Contacto from "../components/sections/Contacto.astro";
 ---
 
 <Layout>
-	<Welcome />
+  <Hero />
+  <Projects />
+  <Techs />
+  <AboutMe />
+  <Contacto />
 </Layout>
