--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -24,7 +24,7 @@ const TAGS = [
 <section class="pt-36 flex items-center text-white/90">
   <div>
     <div class="mb-2 flex sm:flex-row items-center flex-col">
-      <h1 class="font-bold text-4xl lg:text-5xl mb-4">
+      <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl mb-4">
         👋🏻, soy <em class="textGlow">Daniel Mass</em>!
       </h1>
       <div
