--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -37,7 +37,7 @@ const PROJECTS = [
       PROJECTS.map(
         ({ title, description, link, image, tags, year, ghLink }) => (
           <div
-            class={`shadow-xl ${PROJECTS.length === 1 && "col-span-2"} shadow-black/20 backdrop-blur-xl w-fit py-5 px-10 border-2 border-white/10 flex flex-col justify-center rounded-xl`}
+            class={`scale-90 sm:scale-100 shadow-xl ${PROJECTS.length === 1 && "col-span-2"} shadow-black/20 backdrop-blur-xl w-fit py-5 px-10 border-2 border-white/10 flex flex-col justify-center rounded-xl`}
           >
             <h3 class="text-2xl text-center font-bold">{title}</h3>
             <span class="w-full text-center text-purple-500 mt-2">{year}</span>
