--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import Header from "../components/Header.astro";
 ---
 
 <!doctype html>
-<html lang="es">
+<html class="bg-black" lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -28,31 +28,17 @@ import Header from "../components/Header.astro";
 
   html,
   body {
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
-    width: 100%;
     min-height: 100%;
-    font-family:
-      "Satoshi Variable",
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      "Open Sans",
-      "Helvetica Neue",
-      sans-serif;
-    color: #fff;
-    scroll-behavior: smooth;
-  }
-
-  html {
+    width: 100%;
+    font-family: "Satoshi Variable", system-ui, sans-serif;
     background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
     background-size: cover;
     background-repeat: no-repeat;
+    color: #fff;
+    scroll-behavior: smooth;
   }
 
   @media (prefers-reduced-motion) {
