--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,12 @@ import Header from "../components/Header.astro";
     font-display: swap;
   }
 
+  html {
+    background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
   html,
   body {
     overflow-x: hidden;
@@ -34,9 +40,7 @@ import Header from "../components/Header.astro";
     min-height: 100%;
     width: 100%;
     font-family: "Satoshi Variable", system-ui, sans-serif;
-    background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
-    background-size: cover;
-    background-repeat: no-repeat;
+
     color: #fff;
     scroll-behavior: smooth;
   }
