--- a/src/components/sections/Techs.astro
+++ b/src/components/sections/Techs.astro
@@ -10,6 +10,8 @@ import MySQLIcon from "../icons/MySQL.astro";
 import CSSIcon from "../icons/CSS.astro";
 import NextIcon from "../icons/Next.astro";
 import FigmaIcon from "../icons/Figma.astro";
+import ReactIcon from "../icons/React.astro";
+import GitIcon from "../icons/Git.astro";
 
 const TECHS = [
   {
@@ -19,6 +21,10 @@ const TECHS = [
   {
     Icon: GitHubIcon,
     name: "GitHub",
+  },
+  {
+    Icon: GitIcon,
+    name: "Git",
   },
   {
     Icon: TypescriptIcon,
@@ -49,6 +55,10 @@ const TECHS = [
     name: "Next.js",
   },
   {
+    Icon: ReactIcon,
+    name: "React",
+  },
+  {
     Icon: FigmaIcon,
     name: "Figma",
   },
@@ -63,7 +73,7 @@ const TECHS = [
     <h2 class="text-center">Tecnologías</h2>
   </div>
   <div
-    class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 place-items-center gap-8"
+    class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 place-items-center gap-8"
   >
     {
       TECHS.map(({ Icon, name }) => (
