--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,9 +11,11 @@ import Header from "../components/Header.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Daniel Mass | Portfolio</title>
   </head>
-  <body class="py-5 px-10 max-w-[1140px] m-auto min-h-screen text-white">
+  <body class="text-white">
     <Header />
-    <slot />
+    <div class="px-10 max-w-[1140px] m-auto">
+      <slot />
+    </div>
   </body>
 </html>
 
@@ -30,14 +32,13 @@ import Header from "../components/Header.astro";
     background: radial-gradient(125% 125% at 50% 10%, #000 40%, #63e 100%);
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-x: hidden;
   }
 
   html,
   body {
-    overflow-x: hidden;
     margin: 0;
     padding: 0;
-    min-height: 100%;
     width: 100%;
     font-family: "Satoshi Variable", system-ui, sans-serif;
 
