--- a/src/components/sections/Contacto.astro
+++ b/src/components/sections/Contacto.astro
@@ -5,19 +5,19 @@ import MobileMessageIcon from "../icons/MobileMessage.astro";
 
 const methods = [
   {
-    Icon: MailIcon,
-    label: "Email",
-    link: "mailto:danymassmcf@gmail.com",
-  },
-  {
     Icon: LinkedIn,
     label: "LinkedIn",
     link: "www.linkedin.com/in/daniel-mass-jamet-a50b70316",
   },
+  {
+    Icon: MailIcon,
+    label: "danymassmcf@gmail.com",
+    link: "mailto:danymassmcf@gmail.com",
+  },
 ];
 ---
 
-<section id="contacto" class="mt-40">
+<section id="contacto" class="mt-40 pb-32">
   <div
     class="textGlow font-bold text-4xl items-center w-fit m-auto lg:text-5xl mb-8 flex"
   >
@@ -30,11 +30,11 @@ const methods = [
         <li class="w-max m-auto">
           <a
             href={link}
-            class="my-4 flex items-center text-xl px-4 py-1 rounded-full shadow-xl shadow-black/20 hover:-translate-y-1 ease-in-out mx-auto w-max backdrop-blur-xl border-2 border-white/10 hover:bg-black/20 transition group"
+            class="my-8 flex items-center text-xl px-4 py-1 rounded-full shadow-xl shadow-black/20 hover:-translate-y-1 ease-in-out mx-auto w-max backdrop-blur-xl border-2 border-white/10 hover:bg-black/20 transition group"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <Icon class="size-8 mr-2" />
+            <Icon class="size-8 mr-2 group-hover:-translate-y-1 transition" />
             <span class="text-lg">{label}</span>
           </a>
         </li>
