--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,21 +8,21 @@ const { sections } = Astro.props;
   {
     sections.map(({ title, url }: { title: string; url: string }) => (
       <a
-        class="hidden lg:block text-lg hover:text-white transition duration-300"
+        class="hidden md:block text-lg hover:text-white transition duration-300"
         href={url}
       >
         {title}
       </a>
     ))
   }
-  <button id="menuButton" class="lg:hidden z-10">
+  <button id="menuButton" class="hidden z-10">
     <MenuIcon class="textGlow" />
   </button>
 </nav>
 
 <aside
   id="sideBar"
-  class="fixed top-0 left-0 bg-black w-[110vw] translate-x-[110%] h-[110vh] transition-all opacity-0"
+  class="fixed top-0 left-0 bg-black w-[110vw] translate-x-[110%] h-screen transition-all opacity-0"
 >
   <nav class="grid grid-flow-row bg-black">
     <button
@@ -60,6 +60,7 @@ const { sections } = Astro.props;
   const menuButton = document.getElementById("menuButton");
   const closeSidebar = document.getElementById("closeSidebar");
   const sideBar = document.getElementById("sideBar");
+
   menuButton?.addEventListener("click", (e) => {
     e.preventDefault();
     sideBar?.classList.toggle("translate-x-[110%]");
