--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -25,18 +25,33 @@ const PROJECTS = [
 ];
 ---
 
+<script>
+  import AOS from "aos";
+  AOS.init({ once: true });
+</script>
+
 <section id="proyectos" class="mt-40 flex-col flex items-center">
-  <div class="textGlow flex m-auto items-center justify-center mb-8">
+  <div
+    data-aos="zoom-out"
+    data-aos-duration="900"
+    class="textGlow flex m-auto items-center justify-center mb-8"
+  >
     <CodeIcon class="mr-4 size-14" />
     <h2 class="text-center flex items-center text-4xl lg:text-5xl font-bold">
       Proyectos
     </h2>
   </div>
-  <div class="grid gap-8 lg:grid-cols-2">
+  <div
+    data-aos="fade-up"
+    data-aos-duration="500"
+    class="grid gap-8 lg:grid-cols-2"
+  >
     {
       PROJECTS.map(
         ({ title, description, link, image, tags, year, ghLink }) => (
           <div
+            data-aos="flip-right"
+            data-aos-duration="900"
             class={`scale-90 sm:scale-100 shadow-xl ${PROJECTS.length === 1 && "col-span-2"} shadow-black/20 backdrop-blur-xl w-fit py-5 px-10 border-2 border-white/10 flex flex-col justify-center rounded-xl`}
           >
             <h3 class="text-2xl text-center font-bold">{title}</h3>
