--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -6,6 +6,8 @@ import SendIcon from "../icons/Send.astro";
 
 <section id="acerca-de-mi" class="mt-40">
   <div
+    data-aos="zoom-out"
+    data-aos-duration="700"
     class="textGlow font-bold text-4xl items-center w-fit m-auto lg:text-5xl mb-4 flex"
   >
     <UserCircleIcon class="mr-4 size-14" />
@@ -13,6 +15,8 @@ import SendIcon from "../icons/Send.astro";
   </div>
   <div class="flex flex-col lg:flex-row items-center justify-center">
     <Image
+      data-aos="fade"
+      data-aos-duration="1000"
       src="/dani.webp"
       width={500}
       height={500}
@@ -20,7 +24,11 @@ import SendIcon from "../icons/Send.astro";
       class="object-cover size-52 lg:my-0 lg:mr-[6svw] lg:size-60 rounded-2xl border-2 border-white/10 shadow-lg shadow-black/20 mb-8 mt-4 hover:scale-110 transition duration-300"
     />
     <div class="w-full">
-      <p class="text-pretty text-lg">
+      <p
+        data-aos="fade-left"
+        data-aos-duration="500"
+        class="text-pretty text-lg"
+      >
         <span class="text-purple-400">Mi nombre es Daniel</span> pero suelen llamarme
         <strong>Dani</strong>. Comencé a adentrarme en el mundo del desarrollo,
         diseño y programación web el año 2023 con todo. <br />
@@ -33,7 +41,11 @@ import SendIcon from "../icons/Send.astro";
           > y trabajando como freelancer creando páginas web.</span
         >
       </p><br />
-      <p class="text-pretty text-lg">
+      <p
+        data-aos="fade-right"
+        data-aos-duration="500"
+        class="text-pretty text-lg"
+      >
         Una parte esencial de mi vida es la música; sin embargo, por encima de
         todo, <strong
           >soy un fiel seguidor de Jesús, a quien le debo toda mi existencia.</strong
@@ -42,6 +54,8 @@ import SendIcon from "../icons/Send.astro";
     </div>
   </div>
   <a
+    data-aos="fade-up"
+    data-aos-duration="500"
     href="#contacto"
     class="my-12 flex items-center text-xl px-4 py-1 rounded-full shadow-xl shadow-black/20 hover:-translate-y-1 ease-in-out mx-auto w-fit backdrop-blur-xl border-2 border-white/10 hover:bg-black/90 transition hover:border-black/90 group"
   >
