--- a/src/components/sections/Contacto.astro
+++ b/src/components/sections/Contacto.astro
@@ -19,6 +19,8 @@ const methods = [
 
 <section id="contacto" class="mt-40 pb-32">
   <div
+    data-aos="zoom-out"
+    data-aos-duration="700"
     class="textGlow font-bold text-4xl items-center w-fit m-auto lg:text-5xl mb-8 flex"
   >
     <MobileMessageIcon class="mr-4 size-14" />
@@ -29,6 +31,8 @@ const methods = [
       methods.map(({ link, label, Icon }) => (
         <li class="w-max m-auto">
           <a
+            data-aos="fade"
+            data-aos-duration="1000"
             href={link}
             class="my-8 flex items-center text-xl px-4 py-1 rounded-full shadow-xl shadow-black/20 hover:-translate-y-1 ease-in-out mx-auto w-max backdrop-blur-xl border-2 border-white/10 hover:bg-black/20 transition group"
             target="_blank"
