--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,12 @@ import Footer from "../components/Footer.astro";
   <Footer />
 </html>
 
+<script>
+  import Aos from "aos";
+
+  Aos.init({ once: true });
+</script>
+
 <style is:global>
   @font-face {
     font-family: "Satoshi Variable";
