--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,9 +23,9 @@ import Footer from "../components/Footer.astro";
 </html>
 
 <script>
-  import Aos from "aos";
+  import AOS from "aos";
 
-  Aos.init({ once: true });
+  AOS.init({ once: true });
 </script>
 
 <style is:global>
