--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -47,7 +47,7 @@ const PROJECTS = [
           <div
             data-aos="flip-right"
             data-aos-duration="900"
-            class={`scale-90 sm:scale-100 shadow-xl ${PROJECTS.length === 1 && "col-span-2"} shadow-black/20 backdrop-blur-xl w-fit py-5 px-10 border-2 border-white/10 flex flex-col justify-center rounded-xl`}
+            class={`scale-90 sm:scale-100 shadow-xl ${PROJECTS.length === 1 && "col-span-2"} shadow-black/20 backdrop-blur-xl py-5 px-10 w-[80vw] max-w-[450px] border-2 border-white/10 flex flex-col justify-center rounded-xl`}
           >
             <h3 class="text-2xl text-center font-bold">{title}</h3>
             <span class="w-full text-center text-purple-500 mt-2">{year}</span>
@@ -55,11 +55,11 @@ const PROJECTS = [
               loading="eager"
               width={1920}
               height={1440}
-              class="rounded-xl m-auto w-80 h-auto my-4 hover:w-[20.5rem] object-cover transition-all duration-500"
+              class="rounded-xl m-auto w-full my-4 object-cover transition-all duration-500"
               alt="Captura de pantalla de la landing page de Autónomas."
               src={image}
             />
-            <div class="grid grid-flow-col auto-cols-min gap-2 mb-2">
+            <div class="flex flex-wrap w-full gap-2 mb-2">
               {tags.includes("Tailwind") ? <TailwindTag /> : ""}
               {tags.includes("Astro") ? <AstroTag /> : ""}
               {tags.includes("TypeScript") ? <TypeScriptTag /> : ""}
@@ -67,7 +67,7 @@ const PROJECTS = [
             <p class="text-base max-w-72 line-clamp-2 mb-1 text-balance">
               {description}
             </p>
-            <div class="flex mt-2 justify-between">
+            <div class="flex mt-2 flex-col sm:flex-row gap-5 justify-between">
               <a
                 href={ghLink}
                 class={`${ghLink ? "hover:bg-purple-900/50" : "text-gray-400 bg-gray-500/50"} backdrop-blur-xl mr-2 border-2 border-white/10 flex-grow rounded-full text-center flex justify-center  transition py-1 px-2 text-lg items-center`}
@@ -81,7 +81,7 @@ const PROJECTS = [
                 href={link}
                 rel="noopener noreferrer"
                 target="_blank"
-                class="backdrop-blur-xl border-2 hover:bg-blue-900/50 transition  border-white/10 flex-grow rounded-full text-center flex justify-center py-1 px-2 ml-2 text-lg items-center"
+                class="backdrop-blur-xl border-2 hover:bg-blue-900/50 transition  border-white/10 flex-grow rounded-full text-center flex justify-center py-1 px-2 text-lg items-center"
               >
                 <LinkIcon class="mr-2 size-6" />
                 Ver Proyecto
