--- a/src/components/sections/Techs.astro
+++ b/src/components/sections/Techs.astro
@@ -12,6 +12,7 @@ import NextIcon from "../icons/Next.astro";
 import FigmaIcon from "../icons/Figma.astro";
 import ReactIcon from "../icons/React.astro";
 import GitIcon from "../icons/Git.astro";
+import StrapiIcon from "../icons/Strapi.astro";
 
 const TECHS = [
   {
@@ -61,6 +62,10 @@ const TECHS = [
   {
     Icon: FigmaIcon,
     name: "Figma",
+  },
+  {
+    Icon: StrapiIcon,
+    name: "Strapi",
   },
 ];
 ---
