updated linkedin link

--- a/src/components/sections/Contacto.astro
+++ b/src/components/sections/Contacto.astro
@@ -7,7 +7,7 @@ const methods = [
   {
     Icon: LinkedIn,
     label: "LinkedIn",
-    link: "www.linkedin.com/in/daniel-mass-jamet-a50b70316",
+    link: "https://www.linkedin.com/in/daniel-mass-jamet-a50b70316",
   },
   {
     Icon: MailIcon,
